liuyi-ms-k8s-consumer/liuyi-ms-k8s-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liuyi-ms-k8s-consumer
  labels:
    app: liuyi-ms-k8s-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liuyi-ms-k8s-consumer
  template:
    metadata:
      labels:
        app: liuyi-ms-k8s-consumer
    spec:
      hostAliases:
      - hostnames:
        - "s5"
        ip: "172.17.62.202"
      imagePullSecrets:
      - name: liuyi-regsitry-outer
      containers:
      - name: liuyi-ms-k8s-consumer
        image: registry.cn-beijing.aliyuncs.com/xiasimuou/liuyi-ms-k8s-consumer:1.0.1-SNAPSHOT
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 36001
          initialDelaySeconds: 5
          timeoutSeconds: 1
        ports:
        - containerPort: 36001
          hostPort: 36001

---
apiVersion: v1
kind: Service
metadata:
  name: liuyi-ms-k8s-consumer             # 名称
  labels:
    app: liuyi-ms-k8s-consumer
spec:
  type: ClusterIP                               # 开发端口的类型
  ports:
  - port: 36001                                 # 通过service来访问的端口
    targetPort: 36001
    protocol: TCP
  selector:                                     # service负载的容器需要有同样的labels
    app: liuyi-ms-k8s-consumer

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: liuyi-ms-k8s-consumer
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: s5
    http:
      paths:
      - path: /liuyi/consumer
        backend:
          serviceName: liuyi-ms-k8s-consumer
          servicePort: 36001
